feat: integrate auth, rename members and add user principal
