# openapi/v1.yml
@@ -113,6 +113,221 @@ paths:
               schema:
                 $ref: "#/components/schemas/notification"
 
+  /auth/login:
+    post:
+      summary: "Authenticate an user by credentials"
+      operationId: "LoginAuth"
+      tags:
+        - "auth"
+      requestBody:
+        description: "The credentials to authenticate"
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/auth_login"
+      security: []
+      responses:
+        "200":
+          description: "Generated token with expire date"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/auth_token"
+        "401":
+          description: "Unauthorized with wrong credentials"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/notification"
+        "500":
+          description: "Some internal server error"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/notification"
+        default:
+          description: "Some error unrelated to the handler"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/notification"
+
+  /auth/refresh:
+    get:
+      summary: "Refresh an auth token before it expires"
+      operationId: "RefreshAuth"
+      tags:
+        - "auth"
+      responses:
+        "200":
+          description: "Refreshed token with expire date"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/auth_token"
+        "401":
+          description: "Failed to generate valid token"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/notification"
+        "500":
+          description: "Some internal server error"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/notification"
+        default:
+          description: "Some error unrelated to the handler"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/notification"
+
+  /auth/verify:
+    get:
+      summary: "Verify validity for an authentication token"
+      operationId: "VerifyAuth"
+      tags:
+        - "auth"
+      responses:
+        "200":
+          description: "Metadata of the auth token"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/auth_verify"
+        "401":
+          description: "Unauthorized invalid token"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/notification"
+        "500":
+          description: "Some internal server error"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/notification"
+        default:
+          description: "Some error unrelated to the handler"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/notification"
+
+  /profile/token:
+    get:
+      summary: "Retrieve an unlimited auth token"
+      operationId: "TokenProfile"
+      tags:
+        - "profile"
+      responses:
+        "200":
+          description: "Generated token never expiring"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/auth_token"
+        "403":
+          description: "User is not authorized"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/notification"
+        "500":
+          description: "Some internal server error"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/notification"
+        default:
+          description: "Some error unrelated to the handler"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/notification"
+
+  /profile/self:
+    get:
+      summary: "Fetch profile details of the personal account"
+      operationId: "ShowProfile"
+      tags:
+        - "profile"
+      responses:
+        "200":
+          description: "The current profile details"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/profile"
+        "403":
+          description: "User is not authorized"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/notification"
+        "500":
+          description: "Some internal server error"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/notification"
+        default:
+          description: "Some error unrelated to the handler"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/notification"
+
+    put:
+      summary: "Update your own profile information"
+      operationId: "UpdateProfile"
+      tags:
+        - "profile"
+      requestBody:
+        description: "The profile data to update"
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/profile"
+      security: []
+      responses:
+        "200":
+          description: "The updated profile details"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/profile"
+        "403":
+          description: "User is not authorized"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/notification"
+        "422":
+          description: "Failed to validate request"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/notification"
+        "500":
+          description: "Some internal server error"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/notification"
+        default:
+          description: "Some error unrelated to the handler"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/notification"
+
+
+
   /teams:
     get:
       summary: "Fetch all available teams"
@@ -1229,6 +1444,106 @@ components:
       name: Cookie
 
   schemas:
+    auth_login:
+      type: "object"
+      required:
+        - "username"
+        - "password"
+      properties:
+        username:
+          type: "string"
+        password:
+          type: "string"
+          format: "password"
+
+    auth_verify:
+      type: "object"
+      required:
+        - "username"
+      properties:
+        username:
+          type: "string"
+          readOnly: true
+        created_at:
+          type: "string"
+          format: "date-time"
+          x-omitempty: true
+          x-nullable: true
+          readOnly: true
+
+    auth_token:
+      type: "object"
+      required:
+        - "token"
+      properties:
+        token:
+          type: "string"
+          readOnly: true
+        expires_at:
+          type: "string"
+          format: "date-time"
+          x-omitempty: true
+          x-nullable: true
+          readOnly: true
+
+    profile:
+      title: "Profile"
+      description: "Model to represent profile"
+      type: "object"
+      properties:
+        id:
+          type: "string"
+          readOnly: true
+        username:
+          type: "string"
+          x-omitempty: true
+          x-nullable: true
+        password:
+          type: "string"
+          format: "password"
+          x-omitempty: true
+          x-nullable: true
+        email:
+          type: "string"
+          x-omitempty: true
+          x-nullable: true
+        fullname:
+          type: "string"
+          x-omitempty: true
+          x-nullable: true
+        profile:
+          type: "string"
+          x-omitempty: true
+          x-nullable: true
+        admin:
+          type: "boolean"
+          readOnly: true
+        active:
+          type: "boolean"
+          readOnly: true
+        created_at:
+          type: "string"
+          format: "date-time"
+          readOnly: true
+        updated_at:
+          type: "string"
+          format: "date-time"
+          readOnly: true
+        auths:
+          type: "array"
+          x-omitempty: true
+          x-nullable: true
+          readOnly: true
+          items:
+            $ref: "#/components/schemas/user_auth"
+        teams:
+          type: "array"
+          x-omitempty: true
+          x-nullable: true
+          readOnly: true
+          items:
+            $ref: "#/components/schemas/user_team"
+
     teams:
       title: "Teams"
       description: "Model to represent list of teams"
