# pkg/model/member.go
@@ -4,11 +4,11 @@ import (
 	"time"
 )
 
-// Member within Gopad.
-type Member struct {
-	TeamID    string `gorm:"index:idx_id,unique;length:20"`
+// UserTeam within Gopad.
+type UserTeam struct {
+	TeamID    string `gorm:"primaryKey;autoIncrement:false;length:20"`
 	Team      *Team
-	UserID    string `gorm:"index:idx_id,unique;length:20"`
+	UserID    string `gorm:"primaryKey;autoIncrement:false;length:20"`
 	User      *User
 	Perm      string `gorm:"length:64"`
 	CreatedAt time.Time
